# nool

./: Changes.txt  pyproject.toml  requirements_new.txt
sample_data/: status.xlsx  students.xlsx
src/: SidePanelManager.py  main.py  mergeStatusFiles.py  ui.py
src/nool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
