[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nool"
version = "0.1.0"
description = "Nool 2.0 Student Book Distribution App"
authors = [
    {name = "Senthil", email = "sureshkumarksk@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "openpyxl",
    "tk",          # you may need `tkinter` support depending on your platform
    "gspread",     # or your Google Drive lib
    "oauth2client"
]